--- a/src/main/java/ui/UserForm.form
+++ b/src/main/java/ui/UserForm.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="ui.UserForm">
-  <grid id="27dc6" binding="userFieldPanel" layout-manager="GridLayoutManager" row-count="7" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="userFieldPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="600" height="400"/>
@@ -16,20 +16,60 @@
       <title-color color="-1"/>
     </border>
     <children>
-      <scrollpane id="359d5">
+      <grid id="3ff6c" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="7" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="50" height="50"/>
-            <preferred-size width="50" height="50"/>
-          </grid>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <foreground color="-1"/>
+          <background color="-12696756"/>
+          <foreground color="-12696756"/>
         </properties>
         <border type="none"/>
         <children>
+          <grid id="5fb03" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-12696756"/>
+              <foreground color="-12696756"/>
+            </properties>
+            <border type="none"/>
+            <children>
+              <component id="f0ba3" class="javax.swing.JButton" binding="addButton">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13215616"/>
+                  <borderPainted value="false"/>
+                  <foreground color="-1"/>
+                  <hideActionText value="false"/>
+                  <icon value="images/add.png"/>
+                  <opaque value="true"/>
+                  <text resource-bundle="words" key="add"/>
+                </properties>
+              </component>
+              <component id="93821" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <background color="-13215616"/>
+                  <borderPainted value="false"/>
+                  <foreground color="-1"/>
+                  <icon value="images/clear.png"/>
+                  <text resource-bundle="words" key="delete"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
           <component id="5f82d" class="javax.swing.JList" binding="userList">
-            <constraints/>
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
             <properties>
               <background color="-12500671"/>
               <foreground color="-1"/>
@@ -38,171 +78,166 @@
             </properties>
           </component>
         </children>
-      </scrollpane>
-      <component id="a0866" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+      </grid>
+      <grid id="ed9a1" layout-manager="GridLayoutManager" row-count="9" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="save"/>
+          <background color="-12696756"/>
+          <foreground color="-12696756"/>
         </properties>
-      </component>
-      <component id="93821" class="javax.swing.JButton" binding="deleteButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="delete"/>
-        </properties>
-      </component>
-      <component id="f0ba3" class="javax.swing.JButton" binding="addButton">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <hideActionText value="false"/>
-          <opaque value="true"/>
-          <text resource-bundle="words" key="add"/>
-        </properties>
-      </component>
-      <component id="dfcb" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="login"/>
-        </properties>
-      </component>
-      <component id="1837f" class="javax.swing.JTextField" binding="nameField">
-        <constraints>
-          <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <component id="1d4e9" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="password"/>
-        </properties>
-      </component>
-      <component id="1b92e" class="javax.swing.JTextField" binding="passwordField">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <component id="d5026" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="id"/>
-        </properties>
-      </component>
-      <component id="fa2d4" class="javax.swing.JTextField" binding="codeField">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-        </properties>
-      </component>
-      <component id="9bce3" class="javax.swing.JLabel">
-        <constraints>
-          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="description"/>
-        </properties>
-      </component>
-      <component id="998a1" class="javax.swing.JTextArea" binding="descriptionArea">
-        <constraints>
-          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties>
-          <background color="-12500671"/>
-          <caretColor color="-1"/>
-          <foreground color="-1"/>
-          <margin top="0" left="0" bottom="0" right="0"/>
-        </properties>
-      </component>
-      <component id="33975" class="javax.swing.JButton" binding="psocButton">
-        <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="psoc"/>
-        </properties>
-      </component>
-      <component id="79218" class="javax.swing.JButton" binding="bsocButton">
-        <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="bsoc"/>
-        </properties>
-      </component>
-      <component id="1eb6e" class="javax.swing.JButton" binding="localButton">
-        <constraints>
-          <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="local"/>
-        </properties>
-      </component>
-      <component id="d567c" class="javax.swing.JButton" binding="hsocButton">
-        <constraints>
-          <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <background color="-13215616"/>
-          <borderPainted value="false"/>
-          <foreground color="-1"/>
-          <text resource-bundle="words" key="hsoc"/>
-        </properties>
-      </component>
+        <border type="none"/>
+        <children>
+          <component id="dfcb" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="login"/>
+            </properties>
+          </component>
+          <component id="1837f" class="javax.swing.JTextField" binding="nameField">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="1d4e9" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="password"/>
+            </properties>
+          </component>
+          <component id="1b92e" class="javax.swing.JTextField" binding="passwordField">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="d5026" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="id"/>
+            </properties>
+          </component>
+          <component id="fa2d4" class="javax.swing.JTextField" binding="codeField">
+            <constraints>
+              <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="28"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+            </properties>
+          </component>
+          <component id="9bce3" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <foreground color="-1"/>
+              <text resource-bundle="words" key="description"/>
+            </properties>
+          </component>
+          <component id="998a1" class="javax.swing.JTextArea" binding="descriptionArea">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="50"/>
+              </grid>
+            </constraints>
+            <properties>
+              <background color="-12500671"/>
+              <caretColor color="-1"/>
+              <foreground color="-1"/>
+              <margin top="0" left="0" bottom="0" right="0"/>
+            </properties>
+          </component>
+          <component id="1eb6e" class="javax.swing.JButton" binding="localButton">
+            <constraints>
+              <grid row="5" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13215616"/>
+              <borderPainted value="false"/>
+              <foreground color="-1"/>
+              <icon value="images/web.png"/>
+              <text resource-bundle="words" key="local"/>
+            </properties>
+          </component>
+          <component id="d567c" class="javax.swing.JButton" binding="hsocButton">
+            <constraints>
+              <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13215616"/>
+              <borderPainted value="false"/>
+              <foreground color="-1"/>
+              <icon value="images/web.png"/>
+              <text resource-bundle="words" key="hsoc"/>
+            </properties>
+          </component>
+          <component id="33975" class="javax.swing.JButton" binding="psocButton">
+            <constraints>
+              <grid row="7" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13215616"/>
+              <borderPainted value="false"/>
+              <foreground color="-1"/>
+              <icon value="images/web.png"/>
+              <text resource-bundle="words" key="psoc"/>
+            </properties>
+          </component>
+          <component id="79218" class="javax.swing.JButton" binding="bsocButton">
+            <constraints>
+              <grid row="8" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13215616"/>
+              <borderPainted value="false"/>
+              <foreground color="-1"/>
+              <icon value="images/web.png"/>
+              <text resource-bundle="words" key="bsoc"/>
+            </properties>
+          </component>
+          <component id="a0866" class="javax.swing.JButton" binding="saveButton" default-binding="true">
+            <constraints>
+              <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="7" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <background color="-13215616"/>
+              <borderPainted value="false"/>
+              <enabled value="false"/>
+              <foreground color="-1"/>
+              <icon value="images/save.png"/>
+              <text resource-bundle="words" key="save"/>
+            </properties>
+          </component>
+        </children>
+      </grid>
     </children>
   </grid>
 </form>
