--- a/src/main/java/ui/UserForm.form
+++ b/src/main/java/ui/UserForm.form
@@ -3,13 +3,13 @@
   <grid id="27dc6" binding="userFieldPanel" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="600" height="400"/>
+      <xy x="20" y="20" width="860" height="400"/>
     </constraints>
     <properties>
       <background color="-12696756"/>
       <foreground color="-12500671"/>
-      <maximumSize width="600" height="400"/>
-      <minimumSize width="600" height="400"/>
+      <maximumSize width="860" height="400"/>
+      <minimumSize width="860" height="400"/>
     </properties>
     <border type="bevel-raised" title="User">
       <font name="Verdana" size="16" style="1"/>
@@ -19,7 +19,9 @@
       <grid id="3ff6c" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="300" height="-1"/>
+          </grid>
         </constraints>
         <properties>
           <background color="-12696756"/>
@@ -82,7 +84,7 @@
       <grid id="ed9a1" layout-manager="GridLayoutManager" row-count="9" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-12696756"/>
